--- a/assets/main.scss
+++ b/assets/main.scss
@@ -24,3 +24,7 @@ h1, h2, h3, h4, h5, h6 {
 blockquote {
   border-left: 4px solid #2e7d32;
 }
+
+h1, .catalogue-title {
+  color: #e91e63; // a nice pink
+}
