--- a/assets/main.scss
+++ b/assets/main.scss
@@ -25,8 +25,7 @@ blockquote {
   border-left: 4px solid #2e7d32;
 }
 
-/* Custom top bar color */
 .page-header {
-  background-color: pink;
+  background-color: pink !important;
 }
 
