--- a/assets/main.scss
+++ b/assets/main.scss
@@ -28,11 +28,7 @@ blockquote {
 .indent {
   text-indent: 2em;
 }
-/* Force header to be pink no matter what */
 
-header.site-header,
-nav.site-nav,
-.site-nav,
-.site-header {
-  background-color: pink !important;
+body {
+  background-color: #ffeef2; /* soft light pink */
 }
