--- a/assets/main.scss
+++ b/assets/main.scss
@@ -32,3 +32,6 @@ blockquote {
 body {
   background-color: #ffeef2; /* soft light pink */
 }
+.post-title {
+  color: #c2185b !important; /* deep pink-magenta */
+}
