--- a/assets/main.scss
+++ b/assets/main.scss
@@ -30,7 +30,7 @@ blockquote {
 }
 
 body {
-  background-color: #ffeef2; /* soft light pink */
+  background-color: #fff0f5; /* soft light pink */
 }
 .post-title {
   color: #c2185b !important; /* deep pink-magenta */
