--- a/assets/main.scss
+++ b/assets/main.scss
@@ -29,9 +29,7 @@ blockquote {
   text-indent: 2em;
 }
 
-body {
-  background-color: #fff0f5; /* soft light pink */
-}
-.post-list .post-title {
+
+.home .post-title {
   color: #c2185b !important;
 }
