--- a/assets/main.scss
+++ b/assets/main.scss
@@ -36,3 +36,7 @@ blockquote {
 body {
   background-color: #fff0f5; /* soft light pink */
 }
+
+.site-header .site-title {
+  color: #c2185b !important; /* magenta or deep pink */
+}
