--- a/assets/main.scss
+++ b/assets/main.scss
@@ -34,7 +34,7 @@ blockquote {
   color: #c2185b !important;
 }
 body {
-  background-color: #fff0f5; /* soft light pink */
+  background-color: #FFDDF4; /* soft light pink */
 }
 
 .site-header .site-title {
