--- a/assets/main.scss
+++ b/assets/main.scss
@@ -33,10 +33,10 @@ blockquote {
   line-height: 1.7;  /* Adjust this number as needed (1.6–1.8 is usually ideal) */
 }
 }
-body {
-  background-color: #FFDDF4; /* soft light pink */
-}
-
 .site-header .site-title {
   color: #c2185b !important; /* magenta or deep pink */
+}
+
+body {
+  background-color: #d0f0c0; /* soft light pink */
 }
