--- a/assets/main.scss
+++ b/assets/main.scss
@@ -4,7 +4,6 @@
 
 @import 'tale';
 
-// 🌿 Custom green styling
 a, a:visited {
   color: #2e7d32;
 }
@@ -30,8 +29,8 @@ blockquote {
 }
 
 body {
-  background-color: #d0f0c0; /* soft light pink */
+  background-color: #f5fffa; /* mint cream */
 }
 .post-content {
-  line-height: 1.8;  /* Adjust this number as needed (1.6–1.8 is usually ideal) */
+  line-height: 1.8;
 }
