--- a/assets/main.scss
+++ b/assets/main.scss
@@ -37,10 +37,15 @@ a.pink-link:hover {
   text-decoration: underline;
 }
 
+.post, .post-content, article, .page-content {
+  line-height: 1.75;
+}
+.post p {
+  margin-bottom: 1.2em;
+}
+
 
 body {
   background-color: #f5fffa; /* mint cream */
 }
-.post-content {
-  line-height: 1.8;
-}
+
