--- a/assets/main.scss
+++ b/assets/main.scss
@@ -42,9 +42,7 @@ body {
   background-color: #eaffe8;
 }
 
-.post h1 {
-  font-size: 3.5rem !important;
+.post p {
   line-height: 4.0 !important;
-  margin-bottom: 1.6rem !important;
+  margin-bottom: 1.2rem !important;
 }
-
