--- a/assets/main.scss
+++ b/assets/main.scss
@@ -42,7 +42,6 @@ body {
   background-color: #eaffe8;
 }
 
-.post p {
+body {
   line-height: 4.0 !important;
-  margin-bottom: 1.2rem !important;
 }
