--- a/assets/main.scss
+++ b/assets/main.scss
@@ -45,3 +45,11 @@ body {
 body {
   line-height: 4.0 !important;
 }
+
+.post, .post-content, .entry-content {
+  line-height: 1.8 !important;
+}
+
+.post p, .post-content p, .entry-content p {
+  margin-bottom: 1.2rem !important;
+}
