--- a/assets/main.scss
+++ b/assets/main.scss
@@ -46,3 +46,13 @@ div.indent {
   line-height: 2.5 !important;
   margin-bottom: 1.5em !important;
 }
+
+#tapToPlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: transparent;
+  z-index: 9999;
+}
